--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "HOST=localhost react-scripts start",
+    "start": "HOST=localhost PORT=1111 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
