--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "caniuse-lite": "1.0.30001632"
   }
 }
